tests/dataset/tpc-ds/compiler/cpp/q76.error
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:85:12: error: ‘ss’ was not declared in this scope
   85 |   decltype(ss.ss_customer_sk) col_name;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:85:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:86:12: error: ‘d’ was not declared in this scope
   86 |   decltype(d.d_year) d_year;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:86:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:87:12: error: ‘d’ was not declared in this scope
   87 |   decltype(d.d_qoy) d_qoy;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:87:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:88:12: error: ‘i’ was not declared in this scope
   88 |   decltype(i.i_category) i_category;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:88:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:89:12: error: ‘ss’ was not declared in this scope
   89 |   decltype(ss.ss_ext_sales_price) ext_sales_price;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:89:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:92:12: error: ‘r’ was not declared in this scope
   92 |   decltype(r.channel) channel;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:92:12: error: ‘r’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:93:12: error: ‘r’ was not declared in this scope
   93 |   decltype(r.col_name) col_name;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:93:12: error: ‘r’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:94:12: error: ‘r’ was not declared in this scope
   94 |   decltype(r.d_year) d_year;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:94:12: error: ‘r’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:95:12: error: ‘r’ was not declared in this scope
   95 |   decltype(r.d_qoy) d_qoy;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:95:12: error: ‘r’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:96:12: error: ‘r’ was not declared in this scope
   96 |   decltype(r.i_category) i_category;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:96:12: error: ‘r’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:99:12: error: ‘r’ was not declared in this scope
   99 |   decltype(r) r;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:99:12: error: ‘r’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:358:64: error: cannot convert ‘std::nullptr_t’ to ‘int’ in initialization
  358 |           __items.push_back(StorePart{std::string("store"), ss.ss_customer_sk,
      |                                                             ~~~^~~~~~~~~~~~~~
      |                                                                |
      |                                                                std::nullptr_t
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:378:42: error: cannot convert ‘std::nullptr_t’ to ‘int’ in initialization
  378 |                                       ws.ws_bill_customer_sk, d.d_year, d.d_qoy,
      |                                       ~~~^~~~~~~~~~~~~~~~~~~
      |                                          |
      |                                          std::nullptr_t
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:397:42: error: cannot convert ‘std::nullptr_t’ to ‘int’ in initialization
  397 |                                       cs.cs_bill_customer_sk, d.d_year, d.d_qoy,
      |                                       ~~~^~~~~~~~~~~~~~~~~~~
      |                                          |
      |                                          std::nullptr_t
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:404:19: error: ‘concat’ was not declared in this scope; did you mean ‘wcsncat’?
  404 |   auto all_rows = concat(store_part, web_part, catalog_part);
      |                   ^~~~~~
      |                   wcsncat
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:420:65: error: no matching function for call to ‘std::vector<__struct8>::vector(<brace-enclosed initializer list>)’
  420 |             __struct9{__key, std::vector<__struct8>{__struct8{r}}});
      |                                                                 ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; std::__type_identity_t<_Alloc> = std::allocator<__struct8>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; std::__type_identity_t<_Alloc> = std::allocator<__struct8>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; size_type = long unsigned int; value_type = std::vector<__struct8>::value_type; allocator_type = std::allocator<__struct8>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; size_type = long unsigned int; allocator_type = std::allocator<__struct8>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:434:53: error: request for member ‘ext_sales_price’ in ‘std::declval<__struct8>().__struct8::r’, which is of non-class type ‘int’
  434 |                                                  .r.ext_sales_price)>
      |                                                     ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:434:53: error: request for member ‘ext_sales_price’ in ‘std::declval<__struct8>().__struct8::r’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:434:69: error: template argument 1 is invalid
  434 |                                                  .r.ext_sales_price)>
      |                                                                     ^
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:434:69: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:437:35: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  437 |                           __items.push_back(x.r.ext_sales_price);
      |                                   ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:437:49: error: request for member ‘ext_sales_price’ in ‘x.__struct8::r’, which is of non-class type ‘int’
  437 |                           __items.push_back(x.r.ext_sales_price);
      |                                                 ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:432:25:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:431:50: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  431 |                         return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:431:61: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  431 |                         return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                           ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:427:24: error: no matching function for call to ‘std::vector<std::pair<int, __struct10> >::push_back(<brace-enclosed initializer list>)’
  427 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  428 |           {g.key.channel,
      |           ~~~~~~~~~~~~~~~
  429 |            __struct10{g.key.channel, g.key.col_name, g.key.d_year, g.key.d_qoy,
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  430 |                       g.key.i_category, ((int)g.items.size()), ([&](auto v) {
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  431 |                         return std::accumulate(v.begin(), v.end(), 0.0);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  432 |                       })(([&]() {
      |                       ~~~~~~~~~~~
  433 |                         std::vector<decltype(std::declval<__struct8>()
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  434 |                                                  .r.ext_sales_price)>
      |                                                  ~~~~~~~~~~~~~~~~~~~~
  435 |                             __items;
      |                             ~~~~~~~~
  436 |                         for (auto x : g.items) {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~
  437 |                           __items.push_back(x.r.ext_sales_price);
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  438 |                         }
      |                         ~
  439 |                         return __items;
      |                         ~~~~~~~~~~~~~~~
  440 |                       })())}});
      |                       ~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<int, __struct10>; _Alloc = std::allocator<std::pair<int, __struct10> >; value_type = std::pair<int, __struct10>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<int, __struct10> >::value_type&’ {aka ‘const std::pair<int, __struct10>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<int, __struct10>; _Alloc = std::allocator<std::pair<int, __struct10> >; value_type = std::pair<int, __struct10>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<int, __struct10> >::value_type&&’ {aka ‘std::pair<int, __struct10>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq762624354851/001/prog.cpp:448:5: error: conversion from ‘vector<__struct10>’ to non-scalar type ‘vector<__struct8>’ requested
  405 |   std::vector<__struct8> result = ([&]() {
      |                                   ~~~~~~~~
  406 |     std::vector<__struct9> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  407 |     for (auto r : all_rows) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~
  408 |       auto __key =
      |       ~~~~~~~~~~~~
  409 |           Result{r.channel, r.col_name, r.d_year, r.d_qoy, r.i_category};
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  410 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  411 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  412 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  413 |           __g.items.push_back(__struct8{r});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  414 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  415 |           break;
      |           ~~~~~~
  416 |         }
      |         ~
  417 |       }
      |       ~
  418 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  419 |         __groups.push_back(
      |         ~~~~~~~~~~~~~~~~~~~
  420 |             __struct9{__key, std::vector<__struct8>{__struct8{r}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  421 |       }
      |       ~
  422 |     }
      |     ~
  423 |     std::vector<
      |     ~~~~~~~~~~~~
  424 |         std::pair<decltype(std::declval<__struct9>().key.channel), __struct10>>
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  425 |         __items;
      |         ~~~~~~~~
  426 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  427 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  428 |           {g.key.channel,
      |           ~~~~~~~~~~~~~~~
  429 |            __struct10{g.key.channel, g.key.col_name, g.key.d_year, g.key.d_qoy,
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  430 |                       g.key.i_category, ((int)g.items.size()), ([&](auto v) {
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  431 |                         return std::accumulate(v.begin(), v.end(), 0.0);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  432 |                       })(([&]() {
      |                       ~~~~~~~~~~~
  433 |                         std::vector<decltype(std::declval<__struct8>()
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  434 |                                                  .r.ext_sales_price)>
      |                                                  ~~~~~~~~~~~~~~~~~~~~
  435 |                             __items;
      |                             ~~~~~~~~
  436 |                         for (auto x : g.items) {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~
  437 |                           __items.push_back(x.r.ext_sales_price);
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  438 |                         }
      |                         ~
  439 |                         return __items;
      |                         ~~~~~~~~~~~~~~~
  440 |                       })())}});
      |                       ~~~~~~~~~
  441 |     }
      |     ~
  442 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  443 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  444 |     std::vector<__struct10> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  445 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  446 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  447 |     return __res;
      |     ~~~~~~~~~~~~~
  448 |   })();
      |   ~~^~
